k8s/ingress.gras.dashboard.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-shop
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/configuration-snippet: ""
    # nginx.ingress.kubernetes.io/server-snippet: ""
    # nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: "/"
    # nginx.ingress.kubernetes.io/proxy-redirect-from: "/app"
    # nginx.ingress.kubernetes.io/proxy-redirect-to: "/"
spec:
  rules:
  - host: "app.grascannabis.org"
    http:
      paths:
        # - path: /
        #   pathType: Exact 
      - path: /app
        pathType: ImplementationSpecific
        backend:
          service:
            name: gras-service-shop
            port:
              number: 80
